<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">
    <EditText
        android:hint="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterName"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/enter_email" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/enterName"
        android:importantForAutofill="no" />

    <EditText
        android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPassword"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/enterPassword"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/manager"
        android:text="@string/manager"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/employee"
        android:text="@string/employee"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintStart_toEndOf="@id/manager"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showRole"
        android:hint="@string/your_role"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintStart_toEndOf="@id/employee"
        android:textSize="25sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/manager"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gotoLogin"
        android:text="@string/log_in_page"
        app:layout_constraintTop_toBottomOf="@+id/manager"
        app:layout_constraintStart_toEndOf="@+id/register"/>



</androidx.constraintlayout.widget.ConstraintLayout>